[gd_scene load_steps=4 format=3 uid="uid://dp1kgyd1ce1bk"]

[ext_resource type="Texture2D" uid="uid://cswb5do8rrj7q" path="res://pistol/pistol.png" id="1_qdvbg"]
[ext_resource type="Script" path="res://gun.gd" id="1_wo8lu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_amc3y"]
radius = 535.046

[node name="gun" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_wo8lu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_amc3y")

[node name="Marker2D" type="Marker2D" parent="."]

[node name="Pistol" type="Sprite2D" parent="Marker2D"]
position = Vector2(96, 0)
texture = ExtResource("1_qdvbg")

[node name="ShootingPoint" type="Marker2D" parent="Marker2D/Pistol"]
unique_name_in_owner = true
position = Vector2(25, -9)

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.33
autostart = true

[node name="OverloadTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 4.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="OverloadTimer" to="." method="_on_overload_timer_timeout"]
